# claudi

./: .gitignore  ANIMATION_SWAP.md  BUILD.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/hooks/: claudi-hook.sh  claudi_hook.py  verify.sh
.claude/skills/claudi-pet-hooks/: SKILL.md
Skill/: claude-desktop-buddy-analysis.md
assets/slime-final/: README.md  manifest.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: cost.rs  font.rs  hooks.rs  ipc.rs  link.rs  main.rs  render.rs  state.rs  tailer.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: main.rs
docs/superpowers/plans/: 2026-06-14-claudi-board-hal-phase1.md
docs/superpowers/specs/: 2026-06-13-claudi-s3-amoled-pet-hud-design.md  2026-06-14-espwatch-multiboard-port-design.md
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_amoled175.csv  partitions_watch169.csv  pico_sdk_import.cmake  sdkconfig.amoled  sdkconfig.defaults  sdkconfig.defaults.amoled175  sdkconfig.defaults.watch169  sdkconfig.watch
firmware/components/brookesia_app_bullseye/: CMakeLists.txt  esp_brookesia_app_bullseye.cpp  esp_brookesia_app_bullseye.hpp
firmware/components/brookesia_app_claudi/: CMakeLists.txt  esp_brookesia_app_claudi.cpp  esp_brookesia_app_claudi.hpp  idf_component.yml
firmware/components/brookesia_app_colormatch/: CMakeLists.txt  esp_brookesia_app_colormatch.cpp  esp_brookesia_app_colormatch.hpp
firmware/components/brookesia_app_doodle/: CMakeLists.txt  esp_brookesia_app_doodle.cpp  esp_brookesia_app_doodle.hpp
firmware/components/brookesia_app_fruitninja/: CMakeLists.txt  esp_brookesia_app_fruitninja.cpp  esp_brookesia_app_fruitninja.hpp
firmware/components/brookesia_app_mathquiz/: CMakeLists.txt  esp_brookesia_app_mathquiz.cpp  esp_brookesia_app_mathquiz.hpp
firmware/components/brookesia_app_multiply/: CMakeLists.txt  esp_brookesia_app_multiply.cpp  esp_brookesia_app_multiply.hpp
firmware/components/brookesia_app_pixel2048/: CMakeLists.txt  esp_brookesia_app_pixel2048.cpp  esp_brookesia_app_pixel2048.hpp
firmware/components/brookesia_app_pixeljump/: CMakeLists.txt  esp_brookesia_app_pixeljump.cpp  esp_brookesia_app_pixeljump.hpp
firmware/components/brookesia_app_pixelreflex/: CMakeLists.txt  esp_brookesia_app_pixelreflex.cpp  esp_brookesia_app_pixelreflex.hpp
firmware/components/brookesia_app_pixelsnake/: CMakeLists.txt  esp_brookesia_app_pixelsnake.cpp  esp_brookesia_app_pixelsnake.hpp
firmware/components/brookesia_app_tappop/: CMakeLists.txt  esp_brookesia_app_tappop.cpp  esp_brookesia_app_tappop.hpp
firmware/components/brookesia_app_tiltmaze/: CMakeLists.txt  esp_brookesia_app_tiltmaze.cpp  esp_brookesia_app_tiltmaze.hpp
firmware/components/brookesia_app_voiceplane/: CMakeLists.txt  esp_brookesia_app_voiceplane.cpp  esp_brookesia_app_voiceplane.hpp
firmware/components/brookesia_core/: idf_component.yml
firmware/components/claudi_board/: CMakeLists.txt  Kconfig
firmware/components/claudi_board/include/: claudi_board.h
firmware/components/claudi_board_amoled175/: CMakeLists.txt  claudi_board_amoled175.c  idf_component.yml
firmware/components/claudi_board_watch169/: CMakeLists.txt  claudi_board_watch169.c  idf_component.yml
firmware/components/claudi_core/: CMakeLists.txt  claudi_core.c
firmware/components/claudi_core/include/: claudi_core.h
firmware/components/claudi_core/test/: Makefile  test_claudi_core.c
firmware/components/claudi_imu/: CMakeLists.txt  claudi_imu.c
firmware/components/claudi_imu/include/: claudi_imu.h
firmware/components/claudi_net/: CMakeLists.txt  claudi_net.c
firmware/components/claudi_net/include/: claudi_net.h
firmware/components/claudi_power/: CMakeLists.txt  claudi_power.cpp
firmware/components/claudi_power/include/: claudi_power.h
firmware/components/claudi_ui/: CMakeLists.txt  claudi_ui_layout.c
firmware/components/claudi_ui/include/: claudi_ui_layout.h
firmware/components/claudi_ui/test/: Makefile  test_claudi_ui_layout.c
firmware/components/game_icons/: CMakeLists.txt  game_icons.h  icon_bullseye.c  icon_colormatch.c  icon_doodle.c  icon_fruitninja.c  icon_pixel2048.c  icon_pixeljump.c  icon_pixelreflex.c  icon_pixelsnake.c  icon_tappop.c  icon_tiltmaze.c  icon_voiceplane.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/src/: display.c  display.h  main.c  protocol.c  protocol.h  qspi_pio.c  qspi_pio.h  touch.c  touch.h  tusb_config.h  usb_descriptors.c
firmware/tools/: gen_game_icons.py  gen_pet_assets.py  replay_snapshot.sh
scripts/: seed.sh
