[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/cli",
    "crates/simulator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Philip <ht.yu@me.com>"]

[workspace.dependencies]
claudi-protocol = { path = "crates/protocol" }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
