[package]
name = "claudid"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claudid"
path = "src/main.rs"

[dependencies]
claudi-protocol.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
clap.workspace = true
serialport = "4"
notify = "7"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
png = "0.17"
base64 = "0.22"
