[package]
name = "claudi-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claudi-simulator"
path = "src/main.rs"

[dependencies]
claudi-protocol.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
minifb = "0.27"
libc = "0.2"
nix = { version = "0.29", features = ["term", "fs"] }
